latte image and credit

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <!-- This is a comment test.-->
 <body>
     <h1>Welcome to Blueberry Hill Cafe!</h1>
+    <img src="heart_latte.jpg" alt="latte with heart latte art">
+    <h4>Photo by <a href="https://unsplash.com/@gillyberlin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Gilly</a> on <a href="https://unsplash.com/photos/round-black-coffee-cup-JKGlJfiAw2w?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+    </h4>
 </body>
 </html>
