p about cafe added

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <img src="images/heart_latte.jpg" alt="latte with heart latte art">
     <h4>Photo by <a href="https://unsplash.com/@gillyberlin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Gilly</a> on <a href="https://unsplash.com/photos/round-black-coffee-cup-JKGlJfiAw2w?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
     </h4>
+    <p>Enjoy your favorite hot or cold beverage while relaxing in our calming atmosphere.</p>
+
 </body>
 </html>
