--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h4>Photo by <a href="https://unsplash.com/@gillyberlin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Gilly</a> on <a href="https://unsplash.com/photos/round-black-coffee-cup-JKGlJfiAw2w?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
     </h4>
     <p>Enjoy your favorite hot or cold beverage while relaxing in our calming atmosphere.</p>
-
+    <h1>Directions</h1>
+    <p>We are right in the middle of downtown Happytown.</p>
 </body>
 </html>
