--- a/index.html
+++ b/index.html
@@ -14,5 +14,22 @@
     <p>Enjoy your favorite hot or cold beverage while relaxing in our calming atmosphere.</p>
     <h1>Directions</h1>
     <p>We are right in the middle of downtown Happytown.</p>
+    <h1>Menu</h1>
+    <h2>House Blend, $3.49
+
+        A smooth mild blend of coffees that settles lightly on the tongue with a flowery finish.
+
+        Mocha Cafe Latte, $5.79
+        Espresso, steamed milk and a dose of chocolatey goodness. 
+
+        Cappuccino, $4.99
+
+        A classic mixture of espresso, steamed milk and airy foam.
+
+        Chai Tea, $5.35
+
+        A spicy drink made with black tea, spices, milk, and honey.
+
+    </h2>
 </body>
 </html>
