css style commit

--- a/mission.html
+++ b/mission.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission</title>
+    <style type="text/css">
+        body (
+
+            background-color: #235;
+            margin-left: 20%;
+            margin-right: 20%;
+            border: 2px dotted black;
+            padding: 20px;
+            font-family: sans-serif;
+            )
+    </style>
+   
 </head>
 <body>
     <h1>   
