user stories first commit

--- a/mission.html
+++ b/mission.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission</title>
     <style type="text/css">
-        body (
-
-            background-color: #235;
+        body {
+            background-color: #d2b48c;
             margin-left: 20%;
             margin-right: 20%;
             border: 2px dotted black;
-            padding: 20px;
+            padding: 10px 10px 10px 10px;
             font-family: sans-serif;
-            )
-    </style>
+        }
+            
+    </style> 
    
 </head>
 <body>
@@ -23,7 +23,7 @@
     <p>
         We aim to create community surrounded around two of the most important beverages in world history: coffee and tea.
 
-        All are welcome here.
+        <div>All are welcome here.</div>
     </p>
 </body>
 </html>
