--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blueberry Hill Cafe Website</title>
+    
     <style type="text/css">
         body {
             background-color: #d2b48c;
@@ -22,6 +23,7 @@
 <!-- This is a comment test.-->
 <body>
     <h1>Welcome to Blueberry Hill Cafe!</h1>
+    <a href="mission.html">Mission Statement</a>
     <img src="images/heart_latte.jpg" alt="latte with heart latte art">
     <h4>Photo by <a href="https://unsplash.com/@gillyberlin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Gilly</a> on <a href="https://unsplash.com/photos/round-black-coffee-cup-JKGlJfiAw2w?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
     </h4>
