gallery and home links commit

--- a/mission.html
+++ b/mission.html
@@ -18,6 +18,7 @@
    
 </head>
 <body>
+    <a href="index.html">Home</a>
     <h1>   
         Blueberry Hill Cafe's Mission Statement</h1>
     <p>
