--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     <h1>Welcome to Blueberry Hill Cafe!</h1>
     <pre>
         <a href="mission.html">Mission Statement</a>
-        <a href="gallery.html">Gallery</a></pre>
+        <a href="gallery.html">Gallery</a>
+    </pre>
+    <img src="images/email_logo.png" alt="email icon"
+    width="40px">
+    <a href="mailto:jordankingsleyclarke@gmail.com">Send us an email!</a>
     <img src="images/heart_latte.jpg" alt="latte with heart latte art">
     <h4>Photo by <a href="https://unsplash.com/@gillyberlin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Gilly</a> on <a href="https://unsplash.com/photos/round-black-coffee-cup-JKGlJfiAw2w?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
     </h4>
